@@ -1,5 +1,12 @@
 2006-12-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gconvert.c:
+	* glib/gutf8.c (_g_charset_get_aliases): Put the G_GNUC_INTERNAL
+	where gcc doesn't complain about it. 
+
+	* glib/ghash.c: Make ref_count an int to avoid compiler
+	warnings.
+ 
 	* configure.in: Use AC_LANG_SOURCE for the clock test.
 
 	* glib/gthreadpool.h:
